--- a/project.config.json
+++ b/project.config.json
@@ -9,8 +9,8 @@
 	},
 	"compileType": "game",
 	"libVersion": "1.9.93",
-	"appid": "touristappid",
-	"projectname": "xyx",
+	"appid": "wx4cf70fa9420c633b",
+	"projectname": "%E5%B0%8F%E6%B8%B8%E6%88%8F",
 	"isGameTourist": true,
 	"condition": {
 		"search": {
